--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.10.0
 Django==5.2.7
+dotenv==0.9.9
 mysqlclient==2.2.7
 pillow==12.0.0
 python-decouple==3.8
+python-dotenv==1.2.1
 sqlparse==0.5.3
 tzdata==2025.2
